# src/models/responses/UserResponses.ts
@@ -2,3 +2,7 @@ export interface UserLoginResponse {
     token: string;
     message: string;
 }
+
+export interface UserRegisterResponse{
+    message: string;
+}
